--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <nav>
         <img src="./assets/img/logo.svg" alt="" />
         <ul>
-          <a href="#"><i class="ph ph-user"></i>Sobre mim</a>
-          <a href="#"><i class="ph ph-briefcase"></i>Serviços</a>
-          <a href="#"><i class="ph ph-image"></i>portifolio</a>
-          <a href="#"><i class="ph ph-list"></i>currículo</a>
-          <a href="#"><i class="ph ph-envelope-simple-open"></i>Contacto</a>
+          <a href="#abut"><i class="ph ph-user"></i>Sobre mim</a>
+          <a href="#services"><i class="ph ph-briefcase"></i>Serviços</a>
+          <a href="#portifolio"><i class="ph ph-image"></i>portifolio</a>
+          <a href="#curriculum"><i class="ph ph-list"></i>currículo</a>
+          <a href="#contact"><i class="ph ph-envelope-simple-open"></i>Contacto</a>
         </ul>
       </nav>
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
           <h2>Sobre mim</h2>
           Gaúcha de 26 anos, trabalho como desenvolvedora frontend. Sou formada
@@ -56,7 +56,7 @@
      </div>
     </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <h2 class="title-purple">Serviços</h2>
     <div class="services-container">
       <div class="service-card">
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <section class="portifolio">
+  <section class="portifolio" id="portifolio">
     <h2>Portifolio</h2>
     <div class="portifolio-container">
      <div class="portifolio-card">
@@ -133,7 +133,7 @@
     </div>
   </section>
 
-  <section class="curriculum">
+  <section class="curriculum" id="curriculum">
     <h2>currículo</h2>
     <div class="container">
       <img class="img-curriculum" src="./assets/img/img-curruculum.svg" alt="">
@@ -157,7 +157,7 @@
     </div>
   </section>
 
-  <section class="contact">
+  <section class="contact" id="contact">
     <h2>Vamos trabalhar juntos?</h2>
     <p>Se vc gostou do meu trabalho e quer que eu tire sua ideia do papel ou faça parte do seu time entre em contacto como!</p>
     <button>Entre em contato</button>
