--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav>
         <img src="./assets/img/logo.svg" alt="" />
         <ul>
-          <a href="#abut"><i class="ph ph-user"></i>Sobre mim</a>
+          <a href="#about"><i class="ph ph-user"></i>Sobre mim</a>
           <a href="#services"><i class="ph ph-briefcase"></i>Serviços</a>
           <a href="#portifolio"><i class="ph ph-image"></i>portifolio</a>
           <a href="#curriculum"><i class="ph ph-list"></i>currículo</a>
