--- a/index.html
+++ b/index.html
@@ -170,5 +170,7 @@
     </div>
   </section>
   <footer><p> Made by Isadora Stangarlin - 2023 </p></footer>
+  <script src="./assets/js/scrollreveal.js"></script>
+  <script src="./assets/js/main.js"></script>
   </body>
 </html>
